add header with label

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,20 +14,60 @@
 
 <body>
     <!-- header -->
-    <header>
+    <header class="debug">
+        <div class="label-view">
+            <i class="fa-solid fa-table-cells-large"></i>Speaker view
+        </div>
+        <div class="label-row">
+            <i class="fa-solid fa-maximize"></i>
+        </div>
 
     </header>
 
     <!-- main -->
-    <main>
-
+    <main class="debug">
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
+        <div class="debug card"></div>
     </main>
 
     <!-- footer -->
     <footer>
-        
-    </footer>
-    
+
+    </footer class="debug">
+
 </body>
 
 </html>
