--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- header -->
-    <header class="debug">
+    <header>
         <div class="label-view">
             <i class="fa-solid fa-table-cells-large"></i>Speaker view
         </div>
@@ -26,47 +26,49 @@
 
     <!-- main -->
     <main class="debug">
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
-        <div class="debug card"></div>
+        <div class="container-main flex-box">
+            <div class="card"><img src="https://picsum.photos/200/300?random=1"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=2"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=3"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=4"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=5"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=6"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=7"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=8"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=9"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=10"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=11"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=12"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=13"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=14"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=15"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=16"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=17"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=18"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=19"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=20"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=21"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=22"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=23"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=24"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=25"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=26"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=27"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=28"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=29"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=30"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=31"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=32"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=33"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=34"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+            <div class="card"><img src="https://picsum.photos/200/300?random=35"><span class="label-card"><i class="fa-solid fa-microphone-slash"></i>Pingo Pallo</span></div>
+        </div>
     </main>
 
     <!-- footer -->
     <footer>
 
-    </footer class="debug">
+    </footer >
 
 </body>
 
