--- a/index.html
+++ b/index.html
@@ -66,8 +66,66 @@
     </main>
 
     <!-- footer -->
-    <footer>
+    <footer class="flex-foot">
+        <div class=" div-footer">
+            <div class="btn-foot">
+                <i class="fa-solid fa-microphone"></i>
+                <span class="txt-btn">Mute</span>
+            </div>
+            <div class="btn-foot caret">
+                <i class="fa-solid fa-caret-up"></i>
+            </div>
+            <div class="btn-foot">
+                <i class="fa-solid fa-video"></i>
+                <span class="txt-btn">Stop video</span>
+            </div>
+            <div class="btn-foot caret">
+                <i class="fa-solid fa-caret-up"></i>
+            </div>
+        </div>
+        <div class="div-footer">
+            <div class="btn-foot">
+                <i class="fa-solid fa-user-plus"></i>
+                <span class="txt-btn">Invite</span>
+            </div>
+            <div class="btn-foot">
+                <i class="fa-solid fa-user-group"></i>
+                <span class="txt-btn">Partecipans</span>
+            </div>
+            <div class="btn-foot">
+                <i class="fa-solid fa-chart-column"></i>
+                <span class="txt-btn">Polling</span>
+            </div>
+            <div class="btn-foot">
+                <i id="green" class="fa-solid fa-share-from-square"></i>
+                <span class="txt-btn">Share Screen</span>
+            </div>
+            <div class="btn-foot caret">
+                <i class="fa-solid fa-caret-up"></i>
+            </div>
+            <div class="btn-foot">
+                <i class="fa-solid fa-comment"></i>
+                <span class="txt-btn">Chat</span>
+            </div>
+            <div class="btn-foot">
+                <i class="fa-solid fa-record-vinyl"></i>
+                <span class="txt-btn">Record</span>
+            </div>
+            <div class="btn-foot">
+                <i class="fa-solid fa-border-all"></i>
+                <span class="txt-btn">Breakout Room</span>
+            </div>
+            <div class="btn-foot">
+                <i class="fa-solid fa-ellipsis"></i>
+                <span class="txt-btn">More</span>
+            </div>
 
+        </div>
+        <div class="div-footer last-div">
+            <div class="debug" id="end">
+                
+            </div>
+        </div>
     </footer >
 
 </body>
