--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="btn-foot">
                 <i class="fa-solid fa-user-group"></i>
-                <span class="txt-btn">Partecipans</span>
+                <span class="txt-btn">Manage Partecipans</span>
             </div>
             <div class="btn-foot">
                 <i class="fa-solid fa-chart-column"></i>
@@ -122,8 +122,8 @@
 
         </div>
         <div class="div-footer last-div">
-            <div class="debug" id="end">
-                
+            <div id="end">
+                <h2>End Meeting</h2>
             </div>
         </div>
     </footer >
